mass enable comments on posts

--- a/_posts/2012-07-16-my-htc-explorer-pico.html
+++ b/_posts/2012-07-16-my-htc-explorer-pico.html
@@ -11,8 +11,7 @@ tags:
 status: publish
 type: post
 published: true
-meta: {}
-author: 
+comments: true
 ---
 <p><strong>The Story</strong></p>
 <p>My first Android, i got it as a 20th birthday present. Quite a decent phone, and visually much more appealing than the Samsung Galaxy Y. This won't be a comparison of the phones, this is just a post detailing the few caveats I experienced with my Explorer and how I fixed them.</p>
