--- a/_posts/2012-07-23-making-the-explorer-bearable.html
+++ b/_posts/2012-07-23-making-the-explorer-bearable.html
@@ -13,8 +13,7 @@ tags:
 status: publish
 type: post
 published: true
-meta: {}
-author: 
+comments: true
 ---
 <p>Considering how generous <a href="http://forum.xda-developers.com/member.php?u=4375224">Jaggyjags</a> was to make and release a custom ROM for us, I thought I might pay him back (and help the new people) by writing a good, easy to follow tutorial on rooting the HTC Explorer (Pico) and installing JaggyRom. This tutorial will be broken into five parts: Unlocking the Bootloader, Installing a custom Recovery, Rooting, Partitioning the SD Card, and Flashing JaggyRom. The instructions here will walk you through everything so if you're just rooting, follow to where you're rooted. Before you do anything, install HTC Sync from <a href="http://www.htc.com/www/help/htc-explorer/#download">here</a>.</p>
 <p><!--more--></p>
