--- a/_posts/2012-08-27-dreamhost-and-kickstart2-beta-2.html
+++ b/_posts/2012-08-27-dreamhost-and-kickstart2-beta-2.html
@@ -12,8 +12,7 @@ tags:
 status: publish
 type: post
 published: true
-meta: {}
-author: 
+comments: true
 ---
 <p>I was checking out Kickstart version 7.x-2.0-beta2 on my Dreamhost.com shared account when i ran into a few problems, here's a quick two-step fix.</p>
 <p><!--more--></p>
