--- a/_posts/2013-08-02-cloud9ide-and-dreamhost.html
+++ b/_posts/2013-08-02-cloud9ide-and-dreamhost.html
@@ -11,10 +11,7 @@ tags:
 status: publish
 type: post
 published: true
-meta:
-  geo_public: '0'
-  _publicize_pending: '1'
-author: 
+comments: true
 ---
 <h2>Story</h2>
 <p>Since I like to grab whatever computer I can find closest to me, the idea of my work being in the cloud obviously sounds very appealing. Yesterday I decided to make the ultimate jump and move my development environment to the cloud too. Enter <a href="https://c9.ui/" target="_blank">Cloud9 IDE</a>. It really is like Google Docs for code. Read up on it yourself, but here's how i got my shared Dreamhost account to play nice.<!--more--></p>
