seo friendly catagories

--- a/_posts/2012-07-16-my-htc-explorer-pico.html
+++ b/_posts/2012-07-16-my-htc-explorer-pico.html
@@ -3,7 +3,7 @@ layout: post
 title: My HTC Explorer (Pico)
 date: 2012-07-16 17:56:53.000000000 +05:00
 categories:
-- Geeking Out
+- Geeking-Out
 tags:
 - Android
 - HTC Explorer
