--- a/_posts/2012-07-23-making-the-explorer-bearable.html
+++ b/_posts/2012-07-23-making-the-explorer-bearable.html
@@ -3,7 +3,7 @@ layout: post
 title: Making the Explorer Bearable
 date: 2012-07-23 12:21:19.000000000 +05:00
 categories:
-- Geeking Out
+- Geeking-Out
 tags:
 - Android
 - HTC Explorer
