--- a/_posts/2012-08-27-dreamhost-and-kickstart2-beta-2.html
+++ b/_posts/2012-08-27-dreamhost-and-kickstart2-beta-2.html
@@ -3,7 +3,7 @@ layout: post
 title: DreamHost and Kickstart2 Beta 2
 date: 2012-08-27 22:01:13.000000000 +05:00
 categories:
-- Geeking Out
+- Geeking-Out
 tags:
 - Commerce
 - Dreamhost
