--- a/_posts/2013-08-02-cloud9ide-and-dreamhost.html
+++ b/_posts/2013-08-02-cloud9ide-and-dreamhost.html
@@ -3,7 +3,7 @@ layout: post
 title: Cloud9IDE and Dreamhost
 date: 2013-08-02 09:20:40.000000000 +05:00
 categories:
-- Geeking Out
+- Geeking-Out
 tags:
 - Cloud9 IDE
 - Dreamhost
