fixed a hyperlink typo

--- a/_posts/2013-08-02-cloud9ide-and-dreamhost.html
+++ b/_posts/2013-08-02-cloud9ide-and-dreamhost.html
@@ -14,7 +14,7 @@ published: true
 comments: true
 ---
 <h2>Story</h2>
-<p>Since I like to grab whatever computer I can find closest to me, the idea of my work being in the cloud obviously sounds very appealing. Yesterday I decided to make the ultimate jump and move my development environment to the cloud too. Enter <a href="https://c9.ui/" target="_blank">Cloud9 IDE</a>. It really is like Google Docs for code. Read up on it yourself, but here's how i got my shared Dreamhost account to play nice.<!--more--></p>
+<p>Since I like to grab whatever computer I can find closest to me, the idea of my work being in the cloud obviously sounds very appealing. Yesterday I decided to make the ultimate jump and move my development environment to the cloud too. Enter <a href="https://c9.io/" target="_blank">Cloud9 IDE</a>. It really is like Google Docs for code. Read up on it yourself, but here's how i got my shared Dreamhost account to play nice.<!--more--></p>
 <h2>How</h2>
 <p>I warn you, i think using node.js to actually build production applications is a violation of Dreamhost TOS, but hopefully they'll turn a blind-eye to this for our purposes. Still, i take no responsibility for what happens next.<br />
 First get node.js:</p>
